--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="load_image">Load Image</string>
     <string name="image">Image</string>
     <string name="upload">Upload</string>
+    <string name="image_not_set">Image uri not set</string>
 </resources>
